# DiSPA

./: Cargo.toml  LICENSE  dspa_config.json
src/: compiled.rs  config.rs  errors.rs  file_reader.rs  main.rs  objects.rs  statements.rs
test/: tick.mcfunction
test/objects/: test_file.mcfunction
test/src/: test_file.dspa
