[package]
name = "display_animations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
anyhow = "1.0.79"
itertools = "0.12.1"
quaternion-core = "0.5.0"
regex = "1.10.3"
serde = { version = "1.0.196", features = [ "derive" ] }
serde_json = "1.0.113"
thiserror = "1.0.57"
walkdir = "2.4.0"